--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Product Page</title>
+<title>Superior Discord Bot</title>
 <style>
     /* Basic Reset */
     * {
@@ -104,8 +104,7 @@
     
     <header class="header">
         <!-- Product branding and welcome message -->
-        <h1>Welcome to Our Product Page!</h1>
-        <p>Discover the innovative features of our product.</p>
+        <h1>Welcome to Superior Discord Bot!</h1>
     </header>
     
     <section class="product-info">
